--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>woy</title>
     <link rel="stylesheet" href="css\style.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.2.0/fonts/remixicon.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -148,7 +148,7 @@
                 <img src="https://cf.shopee.co.id/file/04bde0d81e72489f551f27df04c37ad2_xhdpi">
             </div>
             <div class="textBox">
-                <span>Shopee Barokah</span>
+                <span>Shopee nga barokah</span>
             </div>
         </div>
 
